crates/ars-components/src/overlay/popover/snapshots/ars_components__overlay__popover__tests__popover_positioner_with_z_index.snap
---
source: crates/ars-components/src/overlay/popover/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).positioner_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "positioner",
            ),
        ),
        (
            Data(
                "ars-placement",
            ),
            String(
                "bottom",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "popover",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "open",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-z-index",
            ),
            "1500",
        ),
    ],
}
